--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,28 +3,26 @@ compatibility_date = "2024-12-01"
 pages_build_output_dir = "./public"
 
 # ============================================
-# 本地开发配置
-# 生产环境请通过 CloudFlare Dashboard 配置绑定
-# ============================================
-
-# D1 数据库绑定
-# 创建数据库: npx wrangler d1 create mori-pics-db
-# 然后将 database_id 填入下方
-[[d1_databases]]
-binding = "DB"
-database_name = "mori-pics-db"
-database_id = "YOUR_D1_DATABASE_ID"
-
-# R2 存储桶绑定
-# 填入你的 R2 桶名称
-[[r2_buckets]]
-binding = "R2"
-bucket_name = "YOUR_R2_BUCKET_NAME"
-
-# ============================================
-# 环境变量 (本地开发用)
-# 生产环境请在 Dashboard -> Settings -> Environment variables 设置
+# 环境变量
+# 生产环境推荐在 Dashboard -> Settings -> Environment variables 设置
 # ============================================
 [vars]
 CUSTOM_DOMAIN = "https://yuzusora.moe"
-# JWT_SECRET 不要写在这里，使用 .dev.vars 文件或 Dashboard 设置
+
+# ============================================
+# D1 和 R2 绑定
+# 
+# 通过 GitHub 部署时，请在 CloudFlare Dashboard 中配置绑定：
+#   Settings -> Functions -> D1 database bindings / R2 bucket bindings
+# 
+# 如果需要本地开发，取消下面的注释并填入真实的 database_id：
+# ============================================
+
+# [[d1_databases]]
+# binding = "DB"
+# database_name = "mori-pics-db"
+# database_id = "在这里填入真实的 D1 数据库 ID"
+
+# [[r2_buckets]]
+# binding = "R2"
+# bucket_name = "mori-pics"
