feat: implement custom S3 storage and forced image download

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "aws4fetch": "^1.0.20",
     "hono": "^4.6.0"
   },
   "devDependencies": {
